syntax = "proto3";

package goph.keeper.v1;
option go_package = "github.com/alkurbatov/goph-keeper/goph";

message LoginRequest {
  string username = 1; // Name of a user.
  string security_key = 2; // Hashed encryption key generated by client.
}

message LoginResponse {
  string user_id = 1; // Unique used ID in UUIDv4 form.
  string access_token = 2; // JWT access token.
}

service Auth {
  // Authenticate a user.
  rpc Login(LoginRequest) returns (LoginResponse);
}
